--- a/cupcake/src/main/resources/templates/cart.html
+++ b/cupcake/src/main/resources/templates/cart.html
@@ -25,10 +25,17 @@
     </div>
 </header>
 <body>
-<div class="order-acceptance-container">
-<h1>Your order have been confirmed</h1>
-<button class="button" type="button">Go to front page</button>
+<div class="cart-container">
+<h1>Your order:</h1>
+
+</div>
+
+<div class="cart-container">
+<form action="/orderAcceptance" method="get">
+    <button class="button" type="submit">Place order</button>
+</form>
 </div>
 
 </body>
+
 </html>
