--- a/cupcake/src/main/resources/public/styles.css
+++ b/cupcake/src/main/resources/public/styles.css
@@ -1,9 +1,18 @@
+@font-face {
+    font-family: 'BiggyCut';
+    src: url('fonts/Biggy-Cut.otf') format('opentype'),
+    url('fonts/Biggy-Cut.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .login-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    background-color: whitesmoke;
+    background-color: #2e3d30;
+    color: whitesmoke;
     width: 300px;
     height: 200px;
     padding: 30px;
@@ -29,18 +38,32 @@
 .login-create-buttons{
     display: flex;
     justify-content: center;
+    color: whitesmoke;
+    background-color: #2e3d30;
+    border: none;
     gap: 20px;
+    font-family: sans-serif;
+    font-size: 14px;
+    padding-top: 5px;
 }
 
 .header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 60px;
+    padding: 10px 60px;
     flex-direction: row;
     background-color: #243025;
     color: whitesmoke;
     font-family: sans-serif;
+}
+
+.header-menu-buttons{
+    color: whitesmoke;
+    background-color: #243025;
+    font-family: sans-serif;
+    font-size: 14px;
+    border: none;
 }
 
 .menu-container{
@@ -57,7 +80,7 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-color: white;
+    background-image: url("concreteBackground.jpeg");
 }
 
 .front-page-container{
