--- a/cupcake/src/main/resources/templates/cupcakeria.html
+++ b/cupcake/src/main/resources/templates/cupcakeria.html
@@ -39,7 +39,7 @@
             <img src="/images/blueberry.png" alt="Blueberry">
             <img src="/images/raspberry.png" alt="Raspberry">
             <img src="/images/crispy.png" alt="Crispy">
-            <img src="/images/rum:raisin.png" alt="Rum/Raisin">
+            <img src="/images/rum-raisin.png" alt="Rum/Raisin">
             <img src="/images/strawberry.png" alt="Strawberry">
             <img src="/images/orange.png" alt="Orange">
             <img src="/images/lemon.png" alt="Lemon">
