--- a/cupcake/src/main/resources/templates/login.html
+++ b/cupcake/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <header>
     <div class="header-container">
-        <h1>Olsker</h1>
+        <h1 style="font-family: 'BiggyCut'; font-size: 50px">OLSKER</h1>
         <div class="menu-container">
             <form action="/login" method="get">
                 <button class="header-menu-buttons" type="submit">Login</button>
