--- a/cupcake/src/main/resources/templates/cupcakeria.html
+++ b/cupcake/src/main/resources/templates/cupcakeria.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Olsker Cupcakeria</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/glider.css">
+    <link rel="stylesheet" th:href="@{/styles.css}">
+    <link rel="stylesheet" th:href="@{/glider.css}">
 </head>
 <body>
 <header>
     <div class="header-container">
-        <h1>Olsker</h1>
+        <h1 style="font-family: 'BiggyCut'; font-size: 50px">OLSKER</h1>
         <div class="menu-container">
             <form action="/login" method="get">
                 <button class="header-menu-buttons" type="submit">Login</button>
@@ -30,45 +31,47 @@
 <div class="cupcakeria-container">
     <h1>Assemble your cupcake</h1>
 
-    <!-- TOPPING -->
-    <h2>Topping</h2>
-    <div class="glider-contain">
-        <button class="glider-prev topping-prev">«</button>
-        <div class="glider topping-slider">
-            <img src="/images/chocolate.png" alt="Chocolate">
-            <img src="/images/blueberry.png" alt="Blueberry">
-            <img src="/images/raspberry.png" alt="Raspberry">
-            <img src="/images/crispy.png" alt="Crispy">
-            <img src="/images/rum-raisin.png" alt="Rum/Raisin">
-            <img src="/images/strawberry.png" alt="Strawberry">
-            <img src="/images/orange.png" alt="Orange">
-            <img src="/images/lemon.png" alt="Lemon">
-            <img src="/images/bluecheese.png" alt="Blue Cheese">
-        </div>
-        <button class="glider-next topping-next">»</button>
-    </div>
+    <form action="/add-to-cart" method="post" id="cupcakeForm">
 
-    <!-- BOTTOM -->
-    <h2>Bottom</h2>
-    <div class="glider-contain">
-        <button class="glider-prev bottom-prev">«</button>
-        <div class="glider bottom-slider">
-            <img src="/images/chocolate-bottom.png" alt="Chocolate bottom">
-            <img src="/images/vanilla-bottom.png" alt="Vanilla bottom">
-            <img src="/images/nutmeg-bottom.png" alt="Nutmeg bottom">
-            <img src="/images/pistachio-bottom.png" alt="Pistachio bottom">
-            <img src="/images/almond-bottom.png" alt="Almond bottom">
+        <!-- TOPPING -->
+        <div class="glider-contain">
+            <h2>Topping</h2>
+            <button class="glider-prev topping-prev">«</button>
+            <div type="button" class="glider topping-slider">
+                <img th:each="topping : ${toppings}"
+                     th:src="@{'/images/' + ${#strings.replace(#strings.toLowerCase(topping.name), ' ', '-')} + '.png'}"
+                     th:data-id="${topping.id}"
+                     th:alt="${topping.name}"
+                     class="topping-image">
+            </div>
+            <button type="button" class="glider-next topping-next">»</button>
         </div>
-        <button class="glider-next bottom-next">»</button>
-    </div>
 
-    <button class="button" id="addToCart">Add to cart</button>
+        <!-- BOTTOM -->
+        <div class="glider-contain">
+            <button type="button" class="glider-prev bottom-prev">«</button>
+            <div class="glider bottom-slider">
+                <img th:each="bottom : ${bottoms}"
+                     th:src="@{'/images/' + ${#strings.replace(#strings.toLowerCase(bottom.name), ' ', '-')} + '-bottom.png'}"
+                     th:data-id="${bottom.id}"
+                     th:alt="${bottom.name}"
+                     class="bottom-image">
+            </div>
+            <button type="button" class="glider-next bottom-next">»</button>
+            <h2>Bottom</h2>
+
+            <!-- Skjulte felter til form-submit -->
+            <input type="hidden" name="toppingId" id="selectedToppingId">
+            <input type="hidden" name="bottomId" id="selectedBottomId">
+
+            <button class="button" type="submit">Add to cart</button>
+        </div>
+
+
+    </form>
 </div>
 
-<!-- Glider JS -->
-<script src="/glider.js"></script>
-
-<!-- Din egen JS -->
-<script src="/cupcake-gallery.js"></script>
+<script th:src="@{/glider.js}" defer></script>
+<script th:src="@{/cupcake-gallery.js}" defer></script>
 </body>
 </html>
