--- a/cupcake/src/main/resources/templates/orderAcceptance.html
+++ b/cupcake/src/main/resources/templates/orderAcceptance.html
@@ -7,7 +7,7 @@
 </head>
 <header>
     <div class="header-container">
-        <h1>Olsker</h1>
+        <h1 style="font-family: 'BiggyCut'; font-size: 50px">OLSKER</h1>
         <div class="menu-container">
             <form action="/login" method="get">
                 <button class="header-menu-buttons" type="submit">Login</button>
@@ -27,7 +27,9 @@
 <body>
 <div class="order-acceptance-container">
 <h1>Your order have been confirmed</h1>
-<button class="button" type="button">Go to front page</button>
+    <form action="/frontpage" method="get">
+        <button class="button" type="submit">Go to front page</button>
+    </form>
 </div>
 
 </body>
